<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cupon"
    tools:context="com.optimussoftware.boohos.main.CuponsTwoFragment"
    android:gravity="center_horizontal"
    android:weightSum="1"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_weight="0.6"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sale_off"/>



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_coupon_primary">

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/show_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/show_shop"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:layout_weight="0.01"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/key_cupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/key"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/cod_cupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cod_cupon"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />
        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/date_cupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/date_cupon"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/date_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/date_date"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />


        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/hour_cupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hour_cupon"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/hour_cupon_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hour_cupon_1"
            android:textSize="@dimen/font_large_size"
            android:padding="2dp"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_coupon_primary">

        <com.optimussoftware.boohos.widget.OptimusTextView
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/not_validate"
            android:textSize="@dimen/font_large_size"
            android:padding="@dimen/cast_libraries_material_featurehighlight_center_horizontal_offset"
            android:layout_weight="0.09"
            android:gravity="center"
            />
    </LinearLayout>


</LinearLayout>
