<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--Logo Herme-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="25dp"
                android:layout_weight="6"
                android:contentDescription="@string/boohos_logo"
                android:src="@drawable/ic_logo_login" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <!--Login Herme-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <com.optimussoftware.boohos.widget.OptimusTextView
                style="@style/OptimusTextStyle.BodyM.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:minHeight="@dimen/icon_size_medium"
                android:text="@string/forget_password" />

            <com.optimussoftware.boohos.widget.OptimusTextView
                style="@style/OptimusTextStyle.BodyR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:minHeight="@dimen/icon_size_medium"
                android:text="@string/enter_email_address" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_email"
                style="@style/OptimusEditTextStyle.02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />


            <com.mikepenz.iconics.view.IconicsButton
                android:id="@+id/button_send"
                style="@style/OptimusButton.Primary"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/button_primary"
                android:text="@string/button_send" />

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>